# willj-dev.github.io

./: README.md  TODO  stack.yaml  willj-dev-ghpages.cabal
content/: 404.html  CNAME  config.yaml  index.html  index.rst  pseudoml.xml
content/css/: _base.scss  _card.scss  _code.scss  _colors.scss  _index.scss  _page.scss  main.scss  utopia.scss
content/css/millennial-utopia/: _page.scss  _terms.scss
content/js/millennial-utopia/: page.js
content/pages/: home.md  home.rst
content/pages/conceptual-fp/: advanced-typeclasses.md  advanced-typeclasses.rst  appendix-foldr.md  appendix-foldr.rst  appendix-lang.md  appendix-lang.rst  basic-concepts.md  basic-concepts.rst  fp-conceptual-guide.rst  index.md  index.rst  intermediate-typeclasses.md  intermediate-typeclasses.rst  introduction.md  introduction.rst  monad-field-guide.md  monad-field-guide.rst  recursion-schemes.rst
content/pages/geometric-universe/: algebra.md  algebra.tex  index.md  index.rst  index.tex  metaphysics.md  metaphysics.tex  physics.md  physics.tex  science.md  science.tex  universe.md  universe.tex
content/pages/millennial-utopia/: a-millennial-utopia.md  a-millennial-utopia.rst  constitution.md  constitution.rst  implementation-ideas.md  implementation-ideas.rst  index.md  index.rst  managing-shared-resources.md  managing-shared-resources.rst  marketing-ideas.md  marketing-ideas.rst  msc.md  msc.rst  proving-mu-viability.md  proving-mu-viability.rst  selected-principles.md  selected-principles.rst  transition.md  transition.rst  utopian-capital.md  utopian-capital.rst
content/templates/: 404.html  base.html  base.rst  conceptual-fp.rst  home.html  index.html  millennial-utopia.rst  project-contents.html
content/templates/conceptual-fp/: base.md  page.html
content/templates/geometric-universe/: page.html
content/templates/millennial-utopia/: base.md  page.html  page.js
docs/: 404.html  CNAME  index.html
docs/conceptual-fp/: advanced-typeclasses.html  appendix-foldr.html  appendix-lang.html  basic-concepts.html  fp-conceptual-guide.html  index.html  intermediate-typeclasses.html  introduction.html  monad-field-guide.html  recursion-schemes.html
docs/css/: main.css
docs/geometric-universe/: algebra.html  index.html  metaphysics.html  physics.html  science.html  universe.html
docs/js/: colorMode.js
docs/js/millennial-utopia/: page.js
docs/millennial-utopia/: a-millennial-utopia.html  constitution.html  implementation-ideas.html  index.html  managing-shared-resources.html  marketing-ideas.html  msc.html  proving-mu-viability.html  selected-principles.html  transition.html  utopian-capital.html
src/: Debug.hs  Main.hs  Site.hs
src/Site/: Common.hs  ConceptualFP.hs  Config.hs  GeometricUniverse.hs  Index.hs  Page.hs  Pandoc.hs  Project.hs  Utopia.hs
src/Site/ConceptualFP/: PseudoML.hs
src/Site/Utopia/: Terms.hs
