name:                willj-dev-ghpages
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/willj-dev/willj-dev.github.io
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable willj-dev-ghpages
  main-is:             Site.hs
  other-modules:       Site.Config, Site.Pandoc, Site.Utopia, Site.Utopia.Terms
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       yaml,
                       filepath,
                       data-default,
                       pandoc,
                       bytestring,
                       aeson,
                       mtl,
                       text
                       
