name:                willj-dev-ghpages
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/willj-dev/willj-dev.github.io
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable willj-dev-ghpages
  main-is:             Main.hs
  other-modules:       Site,
                       Site.Common,
                       Site.Config,
                       Site.Page,
                       Site.Pandoc,
                       Site.Project,
                       Site.Utopia,
                       Site.Utopia.Terms,
                       Site.ConceptualFP,
                       Site.ConceptualFP.PseudoML,
                       Site.GeometricUniverse,
                       Debug
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, RankNTypes
  ghc-options:         -threaded -Wall
  build-depends:       base,
                       aeson,
                       binary,
                       bytestring,
                       containers,
                       data-default,
                       filepath,
                       hakyll,
                       mtl,
                       pandoc,
                       pandoc-types,
                       skylighting,
                       skylighting-core,
                       text,
                       yaml,
                       blaze-markup,
                       blaze-html
